Added Resests, worked on css and html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,77 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>Welcome to My Portfolio!</h1>
+
+        <div>
+            <span class="Dot"></span>
+        </div>
+    </header>
+
+    <nav>
+        <a href="#">About Me</a>
+        <a href="#">My work</a>
+        <a href="#">Contact Me</a>
+        <a href="#">Social Media</a>
+      </nav>
+
+    <section class="card-contanier">
+
+        <div class="card">
+            <div class="card-tittle">
+                Title
+            </div>
+            <div class="card-img">
+                Image
+            </div>
+            <div class="card-description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet, eligendi.
+            </div>
+        <div class="card">
+            <div class="card-tittle">
+                Title
+            </div>
+            <div class="card-img">
+                Image
+            </div>
+            <div class="card-description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet, eligendi.
+            </div>
+        <div class="card">
+            <div class="card-tittle">
+                Title
+            </div>
+            <div class="card-img">
+                Image
+            </div>
+            <div class="card-description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet, eligendi.
+            </div>
+        <div class="card">
+            <div class="card-tittle">
+                Title
+            </div>
+            <div class="card-img">
+                Image
+            </div>
+            <div class="card-description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet, eligendi.
+            </div>
+        <div class="card">
+            <div class="card-tittle">
+                Title
+            </div>
+            <div class="card-img">
+                Image
+            </div>
+            <div class="card-description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet, eligendi.
+            </div>
+
+        </div> 
+    
+    </section>
     
 </body>
 </html>
